--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "babel-preset-react": "^6.24.1"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "json5": "^0.5.1",
     "webpack": "^3.4.1"
