set up local environment

--- a/src/contents/contacts.json5
+++ b/src/contents/contacts.json5
@@ -18,8 +18,8 @@
     imageSrc: ''
   },
   {
-    firstName: 'Eugene',
-    lastName: ' Petrosyan',
+    firstName: 'Jane',
+    lastName: 'Doe',
     number: '+963258741',
     imageSrc: ''
   }
